[project]
name = "claude-flask-sample"
version = "0.1.0"
description = "An application for performing math operations over a REST API."
authors = [
    {name = "Fasih Khatib",email = "hellofasih.confound928@passinbox.com"}
]
requires-python = ">=3.13"
dependencies = [
    "peewee (>=3.19.0,<4.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
    "yoyo-migrations (>=9.0.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "black (>=26.1.0,<27.0.0)"
]
test = [
    "pytest (>=9.0.2,<10.0.0)"
]
